--- a/app/app.css
+++ b/app/app.css
@@ -13,3 +13,28 @@ body {
     color-scheme: dark;
   }
 }
+
+.todo-list {
+  list-style: none;
+  padding: 0;
+}
+
+.todo-list li {
+  display: flex;
+  align-items: center;
+  padding: 8px 0;
+  border-bottom: 1px solid #eee;
+}
+
+.todo-list li:last-child {
+  border-bottom: none;
+}
+
+.todo-list li.completed span {
+  text-decoration: line-through;
+  color: #888;
+}
+
+.todo-list li input[type="checkbox"] {
+  margin-right: 10px;
+}
